cdk.out.tmp/NginxApiNetworkStack.template.json
{
 "Description": "Nginx API VPC network infrastructure (10.1.0.0/16)",
 "Resources": {
  "NginxApiVpcB7BEAB92": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.1.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "NginxApiNetworkStack/NginxApiVpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "NginxApiNetworkStack/NginxApiVpc/Resource"
   }
  },
  "NginxApiVpcPublicSubnet1Subnet5DA69EFA": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-west-2a",
    "CidrBlock": "10.1.0.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "kubernetes.io/cluster/nginx-api-cluster",
      "Value": "shared"
     },
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "NginxApiNetworkStack/NginxApiVpc/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "NginxApiVpcB7BEAB92"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NginxApiNetworkStack/NginxApiVpc/PublicSubnet1/Subnet"
   }
  },
  "NginxApiVpcPublicSubnet1RouteTableC76594A9": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "kubernetes.io/cluster/nginx-api-cluster",
      "Value": "shared"
     },
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "NginxApiNetworkStack/NginxApiVpc/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "NginxApiVpcB7BEAB92"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NginxApiNetworkStack/NginxApiVpc/PublicSubnet1/RouteTable"
   }
  },
  "NginxApiVpcPublicSubnet1RouteTableAssociation02ADE80A": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "NginxApiVpcPublicSubnet1RouteTableC76594A9"
    },
    "SubnetId": {
     "Ref": "NginxApiVpcPublicSubnet1Subnet5DA69EFA"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NginxApiNetworkStack/NginxApiVpc/PublicSubnet1/RouteTableAssociation"
   }
  },
  "NginxApiVpcPublicSubnet1DefaultRoute76093A5E": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "NginxApiVpcIGW5928105F"
    },
    "RouteTableId": {
     "Ref": "NginxApiVpcPublicSubnet1RouteTableC76594A9"
    }
   },
   "DependsOn": [
    "NginxApiVpcVPCGW18226190"
   ],
   "Metadata": {
    "aws:cdk:path": "NginxApiNetworkStack/NginxApiVpc/PublicSubnet1/DefaultRoute"
   }
  },
  "NginxApiVpcPublicSubnet1EIPE121B9CD": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "kubernetes.io/cluster/nginx-api-cluster",
      "Value": "shared"
     },
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "NginxApiNetworkStack/NginxApiVpc/PublicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "NginxApiNetworkStack/NginxApiVpc/PublicSubnet1/EIP"
   }
  },
  "NginxApiVpcPublicSubnet1NATGatewayB0E85B54": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "NginxApiVpcPublicSubnet1EIPE121B9CD",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "NginxApiVpcPublicSubnet1Subnet5DA69EFA"
    },
    "Tags": [
     {
      "Key": "kubernetes.io/cluster/nginx-api-cluster",
      "Value": "shared"
     },
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "NginxApiNetworkStack/NginxApiVpc/PublicSubnet1"
     }
    ]
   },
   "DependsOn": [
    "NginxApiVpcPublicSubnet1DefaultRoute76093A5E",
    "NginxApiVpcPublicSubnet1RouteTableAssociation02ADE80A"
   ],
   "Metadata": {
    "aws:cdk:path": "NginxApiNetworkStack/NginxApiVpc/PublicSubnet1/NATGateway"
   }
  },
  "NginxApiVpcPublicSubnet2Subnet95FA2523": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-west-2b",
    "CidrBlock": "10.1.1.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "kubernetes.io/cluster/nginx-api-cluster",
      "Value": "shared"
     },
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "NginxApiNetworkStack/NginxApiVpc/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "NginxApiVpcB7BEAB92"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NginxApiNetworkStack/NginxApiVpc/PublicSubnet2/Subnet"
   }
  },
  "NginxApiVpcPublicSubnet2RouteTableE182E84F": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "kubernetes.io/cluster/nginx-api-cluster",
      "Value": "shared"
     },
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "NginxApiNetworkStack/NginxApiVpc/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "NginxApiVpcB7BEAB92"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NginxApiNetworkStack/NginxApiVpc/PublicSubnet2/RouteTable"
   }
  },
  "NginxApiVpcPublicSubnet2RouteTableAssociationD8AC3EA6": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "NginxApiVpcPublicSubnet2RouteTableE182E84F"
    },
    "SubnetId": {
     "Ref": "NginxApiVpcPublicSubnet2Subnet95FA2523"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NginxApiNetworkStack/NginxApiVpc/PublicSubnet2/RouteTableAssociation"
   }
  },
  "NginxApiVpcPublicSubnet2DefaultRoute53227855": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "NginxApiVpcIGW5928105F"
    },
    "RouteTableId": {
     "Ref": "NginxApiVpcPublicSubnet2RouteTableE182E84F"
    }
   },
   "DependsOn": [
    "NginxApiVpcVPCGW18226190"
   ],
   "Metadata": {
    "aws:cdk:path": "NginxApiNetworkStack/NginxApiVpc/PublicSubnet2/DefaultRoute"
   }
  },
  "NginxApiVpcPrivateSubnet1Subnet1174CD0B": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-west-2a",
    "CidrBlock": "10.1.2.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "karpenter.sh/discovery",
      "Value": "nginx-api-cluster"
     },
     {
      "Key": "kubernetes.io/cluster/nginx-api-cluster",
      "Value": "shared"
     },
     {
      "Key": "kubernetes.io/role/internal-elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "NginxApiNetworkStack/NginxApiVpc/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "NginxApiVpcB7BEAB92"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NginxApiNetworkStack/NginxApiVpc/PrivateSubnet1/Subnet"
   }
  },
  "NginxApiVpcPrivateSubnet1RouteTable98063B8E": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "karpenter.sh/discovery",
      "Value": "nginx-api-cluster"
     },
     {
      "Key": "kubernetes.io/cluster/nginx-api-cluster",
      "Value": "shared"
     },
     {
      "Key": "kubernetes.io/role/internal-elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "NginxApiNetworkStack/NginxApiVpc/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "NginxApiVpcB7BEAB92"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NginxApiNetworkStack/NginxApiVpc/PrivateSubnet1/RouteTable"
   }
  },
  "NginxApiVpcPrivateSubnet1RouteTableAssociationFAF090C8": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "NginxApiVpcPrivateSubnet1RouteTable98063B8E"
    },
    "SubnetId": {
     "Ref": "NginxApiVpcPrivateSubnet1Subnet1174CD0B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NginxApiNetworkStack/NginxApiVpc/PrivateSubnet1/RouteTableAssociation"
   }
  },
  "NginxApiVpcPrivateSubnet1DefaultRoute40D56BF4": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "NginxApiVpcPublicSubnet1NATGatewayB0E85B54"
    },
    "RouteTableId": {
     "Ref": "NginxApiVpcPrivateSubnet1RouteTable98063B8E"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NginxApiNetworkStack/NginxApiVpc/PrivateSubnet1/DefaultRoute"
   }
  },
  "NginxApiVpcPrivateSubnet2SubnetD6B4249D": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-west-2b",
    "CidrBlock": "10.1.3.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "karpenter.sh/discovery",
      "Value": "nginx-api-cluster"
     },
     {
      "Key": "kubernetes.io/cluster/nginx-api-cluster",
      "Value": "shared"
     },
     {
      "Key": "kubernetes.io/role/internal-elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "NginxApiNetworkStack/NginxApiVpc/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "NginxApiVpcB7BEAB92"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NginxApiNetworkStack/NginxApiVpc/PrivateSubnet2/Subnet"
   }
  },
  "NginxApiVpcPrivateSubnet2RouteTable0500355F": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "karpenter.sh/discovery",
      "Value": "nginx-api-cluster"
     },
     {
      "Key": "kubernetes.io/cluster/nginx-api-cluster",
      "Value": "shared"
     },
     {
      "Key": "kubernetes.io/role/internal-elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "NginxApiNetworkStack/NginxApiVpc/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "NginxApiVpcB7BEAB92"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NginxApiNetworkStack/NginxApiVpc/PrivateSubnet2/RouteTable"
   }
  },
  "NginxApiVpcPrivateSubnet2RouteTableAssociationE20F05FC": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "NginxApiVpcPrivateSubnet2RouteTable0500355F"
    },
    "SubnetId": {
     "Ref": "NginxApiVpcPrivateSubnet2SubnetD6B4249D"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NginxApiNetworkStack/NginxApiVpc/PrivateSubnet2/RouteTableAssociation"
   }
  },
  "NginxApiVpcPrivateSubnet2DefaultRoute5A04222F": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "NginxApiVpcPublicSubnet1NATGatewayB0E85B54"
    },
    "RouteTableId": {
     "Ref": "NginxApiVpcPrivateSubnet2RouteTable0500355F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NginxApiNetworkStack/NginxApiVpc/PrivateSubnet2/DefaultRoute"
   }
  },
  "NginxApiVpcIGW5928105F": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "NginxApiNetworkStack/NginxApiVpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "NginxApiNetworkStack/NginxApiVpc/IGW"
   }
  },
  "NginxApiVpcVPCGW18226190": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "NginxApiVpcIGW5928105F"
    },
    "VpcId": {
     "Ref": "NginxApiVpcB7BEAB92"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NginxApiNetworkStack/NginxApiVpc/VPCGW"
   }
  },
  "NginxApiVpcRestrictDefaultSecurityGroupCustomResource427E8AD1": {
   "Type": "Custom::VpcRestrictDefaultSG",
   "Properties": {
    "ServiceToken": {
     "Fn::GetAtt": [
      "CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E",
      "Arn"
     ]
    },
    "DefaultSecurityGroupId": {
     "Fn::GetAtt": [
      "NginxApiVpcB7BEAB92",
      "DefaultSecurityGroup"
     ]
    },
    "Account": "450683699755"
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "NginxApiNetworkStack/NginxApiVpc/RestrictDefaultSecurityGroupCustomResource/Default"
   }
  },
  "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Version": "2012-10-17",
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "lambda.amazonaws.com"
       }
      }
     ]
    },
    "ManagedPolicyArns": [
     {
      "Fn::Sub": "arn:${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
     }
    ],
    "Policies": [
     {
      "PolicyName": "Inline",
      "PolicyDocument": {
       "Version": "2012-10-17",
       "Statement": [
        {
         "Effect": "Allow",
         "Action": [
          "ec2:AuthorizeSecurityGroupIngress",
          "ec2:AuthorizeSecurityGroupEgress",
          "ec2:RevokeSecurityGroupIngress",
          "ec2:RevokeSecurityGroupEgress"
         ],
         "Resource": [
          {
           "Fn::Join": [
            "",
            [
             "arn:aws:ec2:us-west-2:450683699755:security-group/",
             {
              "Fn::GetAtt": [
               "NginxApiVpcB7BEAB92",
               "DefaultSecurityGroup"
              ]
             }
            ]
           ]
          }
         ]
        }
       ]
      }
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "NginxApiNetworkStack/Custom::VpcRestrictDefaultSGCustomResourceProvider/Role"
   }
  },
  "CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E": {
   "Type": "AWS::Lambda::Function",
   "Properties": {
    "Code": {
     "S3Bucket": "cdk-hnb659fds-assets-450683699755-us-west-2",
     "S3Key": "7fa1e366ee8a9ded01fc355f704cff92bfd179574e6f9cfee800a3541df1b200.zip"
    },
    "Timeout": 900,
    "MemorySize": 128,
    "Handler": "__entrypoint__.handler",
    "Role": {
     "Fn::GetAtt": [
      "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0",
      "Arn"
     ]
    },
    "Runtime": "nodejs22.x",
    "Description": "Lambda function for removing all inbound/outbound rules from the VPC default security group"
   },
   "DependsOn": [
    "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0"
   ],
   "Metadata": {
    "aws:cdk:path": "NginxApiNetworkStack/Custom::VpcRestrictDefaultSGCustomResourceProvider/Handler",
    "aws:asset:path": "asset.7fa1e366ee8a9ded01fc355f704cff92bfd179574e6f9cfee800a3541df1b200",
    "aws:asset:property": "Code"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/81UTW/bMAz9LdWxULwsA7ohN9coBgPdEiRFDwuCgZaYVI0tGSLlLDPy3wd/JMHWoZf24BM/RD48Uk+aRJNPX6LxFexppPRulJssqpcMaidhTz9RTaL6sVSrWpgy1tojEZKYimshRQG/4t+nwAJ/BcY9HE4ZCplFTpzdmG3wwMZZMV3VwkKBf5U8HMomMQ9ZbpSQQhntvwHt2qKjfKXDmwoYX7Ssj2uZbOzjPJEd6LLtWtUCKjA5ZCY3fPjh7Am1KlWqe7+Bus2d2p2nLDuQtJzZewhWPYkp+4BSmLK6Sf4pByKztWlZ3fTrmtnEYz99P88gWLREtP5+vjcxXYlrsR4MwWGw6KTUCajxFi4wPkCW4yV/ycVETpkW4FzcOHfpvDGXZcteu++uzA3kNICdv43GcJgMhEanwtQyeotnDXV/XB/FzKCeCrR8lAskF7xCmQRiV5zC9 [...]
   },
   "Metadata": {
    "aws:cdk:path": "NginxApiNetworkStack/CDKMetadata/Default"
   }
  }
 },
 "Outputs": {
  "VpcIdOutput": {
   "Description": "VPC ID for nginx-api-cluster",
   "Value": {
    "Ref": "NginxApiVpcB7BEAB92"
   },
   "Export": {
    "Name": "NginxApiNetworkVpcId"
   }
  },
  "VpcCidrOutput": {
   "Description": "VPC CIDR block for nginx-api-cluster",
   "Value": {
    "Fn::GetAtt": [
     "NginxApiVpcB7BEAB92",
     "CidrBlock"
    ]
   },
   "Export": {
    "Name": "NginxApiNetworkVpcCidr"
   }
  },
  "PublicSubnetIdsOutput": {
   "Description": "Public Subnet IDs",
   "Value": {
    "Fn::Join": [
     "",
     [
      {
       "Ref": "NginxApiVpcPublicSubnet1Subnet5DA69EFA"
      },
      ",",
      {
       "Ref": "NginxApiVpcPublicSubnet2Subnet95FA2523"
      }
     ]
    ]
   },
   "Export": {
    "Name": "NginxApiNetworkPublicSubnetIds"
   }
  },
  "PrivateSubnetIdsOutput": {
   "Description": "Private Subnet IDs",
   "Value": {
    "Fn::Join": [
     "",
     [
      {
       "Ref": "NginxApiVpcPrivateSubnet1Subnet1174CD0B"
      },
      ",",
      {
       "Ref": "NginxApiVpcPrivateSubnet2SubnetD6B4249D"
      }
     ]
    ]
   },
   "Export": {
    "Name": "NginxApiNetworkPrivateSubnetIds"
   }
  },
  "ExportsOutputRefNginxApiVpcPrivateSubnet1Subnet1174CD0B767F3D15": {
   "Value": {
    "Ref": "NginxApiVpcPrivateSubnet1Subnet1174CD0B"
   },
   "Export": {
    "Name": "NginxApiNetworkStack:ExportsOutputRefNginxApiVpcPrivateSubnet1Subnet1174CD0B767F3D15"
   }
  },
  "ExportsOutputRefNginxApiVpcPrivateSubnet2SubnetD6B4249DE818A381": {
   "Value": {
    "Ref": "NginxApiVpcPrivateSubnet2SubnetD6B4249D"
   },
   "Export": {
    "Name": "NginxApiNetworkStack:ExportsOutputRefNginxApiVpcPrivateSubnet2SubnetD6B4249DE818A381"
   }
  },
  "ExportsOutputRefNginxApiVpcB7BEAB926351F217": {
   "Value": {
    "Ref": "NginxApiVpcB7BEAB92"
   },
   "Export": {
    "Name": "NginxApiNetworkStack:ExportsOutputRefNginxApiVpcB7BEAB926351F217"
   }
  },
  "ExportsOutputRefNginxApiVpcPrivateSubnet1RouteTable98063B8E4051C546": {
   "Value": {
    "Ref": "NginxApiVpcPrivateSubnet1RouteTable98063B8E"
   },
   "Export": {
    "Name": "NginxApiNetworkStack:ExportsOutputRefNginxApiVpcPrivateSubnet1RouteTable98063B8E4051C546"
   }
  },
  "ExportsOutputRefNginxApiVpcPrivateSubnet2RouteTable0500355FFE19B2C9": {
   "Value": {
    "Ref": "NginxApiVpcPrivateSubnet2RouteTable0500355F"
   },
   "Export": {
    "Name": "NginxApiNetworkStack:ExportsOutputRefNginxApiVpcPrivateSubnet2RouteTable0500355FFE19B2C9"
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
